--- a/_posts/interviews/2023-03-14-Kafka.md
+++ b/_posts/interviews/2023-03-14-Kafka.md
@@ -13,7 +13,6 @@ tags:
 
 ---
 ### 什么是Kafka？为什么要使用kafka？优点？可以直接用http调用吗？为什么要加一个Kafka？
-
 是一个分布式流处理平台，可以处理实时数据流，一般做消息队列使用。
 
 为什么使用Kafka？
@@ -39,11 +38,6 @@ Kafka支持高性能、低延迟的数据传输，主要是它的架构和采用
 ---
 ### 发布订阅模型
 发布订阅模型使用主题作为消息通信载体，类似于广播模式，发布者发布一条消息，会通过主题传递给所有的订阅者。
-
-- Topic：topic是生产者和消费者通信的载体，生产者将消息发送到特定的topic上，消费者通过订阅特定的topic来消费消息。
-- Partition：partition属于topic的一部分，一个topic可以有多个partition，并且同一topic下的partition可以分布在不同的broker上，
-也就是说一个topic可以横跨多个broker。
-- broker：broker可以看作是一个独立的kafka实例，多个kafka broker可以组成一个kafka 集群。
 
 ---
 ### Kafka的架构是什么？包括哪些组件？各个组件的作用是什么？
@@ -81,7 +75,6 @@ Kafka支持高性能、低延迟的数据传输，主要是它的架构和采用
 
 ---
 ### Kafka的消费者是如何工作的？如何实现消息消费的负载均衡？
-
 消费者的工作机制：
 1. 消费者可以订阅一个或多个主题来消费消息，每个主题被划分成多个partition分区，每个分区是一个有序的消息队列；
 2. 消费者会以pull拉取的方式从kafka集群获取消息；
@@ -96,7 +89,6 @@ Kafka支持高性能、低延迟的数据传输，主要是它的架构和采用
 
 ---
 ### Kafka的消息大小有限制吗？如何处理大消息？
-
 有，默认是1MB，参数是max.request.size
 
 如何处理大消息：
@@ -114,10 +106,8 @@ Kafka支持高性能、低延迟的数据传输，主要是它的架构和采用
 - 消费时收到引用，读取实际数据。
 4. 启动压缩：生产者端可以启动压缩
 
-
 ---
 ### Kafka partition数量和consumer数量有什么关系，消费者组是什么作用？
-
 一个partition可以被多个消费者组消费，但是在一个消费组内只能有一个消费者消费。
 
 **消费者组的作用：**
@@ -133,7 +123,6 @@ Kafka支持高性能、低延迟的数据传输，主要是它的架构和采用
 
 ---
 ### Kafka的消息格式是什么？如何实现自定义消息格式？
-
 kafka会把多条消息放在一个batch里，batch里面是一个个record，一个record就是一条消息，
 record里面有：
 1. key：用于分区分配
@@ -145,7 +134,6 @@ record里面有：
 
 ---
 ### Kafka的分区机制是什么？如何实现分区的负载均衡？
-
 分区机制就是指kafka中的每个topic主题会被划分成多个partition分区，每个分区是一个有序的消息队列，分区允许kafka在多个broker之间分布数据。
 
 分区作用：
@@ -160,7 +148,6 @@ record里面有：
 
 ---
 ### Kafka的副本机制是什么？如何实现副本的同步和选举？
-
 一个主题会有多个分区，分区中有一个leader和多个follower，每个分区都会有一个leader副本，follower副本会从leader副本同步数据。
 
 **副本集合**
@@ -175,7 +162,6 @@ record里面有：
 
 ---
 ### Kafka的高可用性是什么？如何保障Kafka的高可用性？
-
 1. 副本机制：kafka为每个主题设置多个副本，副本分布在不同的broker上，每个分区都有一个leader和多个follower。生产者发送的消息首先发给leader，然后同步给follower；
 2. ack机制：生产者可以控制消息的确认级别，避免数据丢失
 3. 故障恢复机制：当leader所在的broker节点宕机时，kafka会从ISR列表中选举一个新的leader继续提供服务
@@ -183,14 +169,12 @@ record里面有：
 
 ---
 ### Kafka的应用场景有哪些？如何根据不同场景使用Kafka？
-
 1. 消息队列：解耦生产者和消费者，解耦、削峰、异步；
 2. 日志聚合：收集日志数据，集中管理和分析；
 3. 流处理：对实时数据流进行处理，比如过滤、聚合、转换。
 
 ---
 ### Kafka和其他消息队列的比较有哪些？Kafka的优势在哪里？
-
 Kafka的特性：
 1. 支持持久化数据到磁盘
 2. 支持消费者组的概念，同一个组内的消费者不会重复消费相同的消息
@@ -216,7 +200,7 @@ Kafka的特性：
 
 1. 消息可以持久化，服务器崩溃了，也可以恢复数据；
 2. 副本机制:每个topic的partition分区可以配置多个副本，其中一个作为leader，其他的都是follower，leader会处理所有的读写请求，follower会从leader同步数据，如果leader失败，会进行leader选举，可以保证系统的可用性和消息的可靠性；
-3. **ack机制**：生产者在发送消息的时候可以选择不同的确认级别：
+3. **ack机制**：生产者在发送消息的时候可以选择不同的**确认级别**：
  - acks = 0：表示生产者不会等待消息确认，可能消息会丢失；
  - acks = 1：表示生产者会等待leader确认收到消息，但是不会等待所有follower同步完成；
  - acks = all：表示生产者会等待ISR列表（in-sync replicas）中的所有follower确认收到消息。
@@ -224,7 +208,6 @@ Kafka的特性：
 
 ---
 ### Kafka的消费者如何处理重复消息？如何保证消息的有序性？如何保证消息不丢失？
-
 为什么会收到重复消息？
 1. 消费者组有消费者加入或退出，分区会被重新分配，可能导致重复消费；
 2. offset没有成功提交；
