--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -16,7 +16,6 @@ tags:
 
 ---
 ### redis为什么快？
-
 1. 数据存放在内存中，读写速度就比磁盘要快；
 2. 内置的简单高效的数据结构：比如字符串、哈希表、列表、集合等
 3. redis使用单线程模型，避免了多线程的上下文切换，不用考虑线程间的竞争和同步问题；
@@ -179,7 +178,6 @@ INT？ptr直接存1？
 
 ---
 ### rdb和aof两种持久化机制比较？AOF重写？
-
 1. **RDB(Redis Database Backup):** RDB是一种快照机制，保存的是压缩后的二进制文件。将内存中的数据集保存到磁盘上。
 - 优点：
   - 保存的是压缩后的二进制文件，文件紧凑，恢复数据时候直接解析还原数据就行，比较快，不用一条条执行命令，适合备份和故障恢复。
@@ -244,7 +242,7 @@ INT？ptr直接存1？
 ---
 ### 常见的缓存读写策略/缓存更新策略有哪些？
 1. cache aside 旁路缓存： 读时，先读缓存，没有缓存，从数据库加载；更新时，更新数据库，再删除缓存；
-2. 延迟双删： 先删除缓存项，更新数据库项，等待一段时间后，再次删除缓存。防止删除缓存后但数据库更新前其他线程把旧数据再次加载到缓存。
+2. 延迟双删：先删除缓存项，更新数据库项，等待一段时间后，再次删除缓存。防止删除缓存后但数据库更新前其他线程把旧数据再次加载到缓存。
 
 ---
 ### 如何保证缓存和数据库数据的一致性？
@@ -311,11 +309,8 @@ INT？ptr直接存1？
 ---
 ### 大量请求的缓存失效如何解决？
 1. 缓存预热
-
 2. 设置不同的过期时间
-
 3. 缓存分级，本地缓存+远程缓存，如果远程缓存失效，再从本地缓存读取
-
 4. 数据库降级
 
 ---
@@ -376,6 +371,10 @@ redisson.shutdown();
 ```
 
 ---
+### 为什么使用Lua脚本？不能用一个个命令？
+保证事务性
+
+---
 ### 用redis实现分布式锁？
 1. 设置一个键值对到redis上，键是锁的标识符，值是不同客户端的uuid；
 2. 使用的时候先加锁，使用完执行Lua脚本删除键值对，解锁。
@@ -430,7 +429,6 @@ redission使用锁的时候，如果不指定锁的过期时间的话，redissio
 
 ---
 ### redis的管道是什么？如何使用管道提高性能？
-
 redis支持管道，客户端可以一次发送多条命令，最后一起读取返回结果，这样只需要一次网络开销，速度就会得到提升，主要是解决网络io的性能问题。
 
 ---
@@ -440,7 +438,6 @@ Lua脚本是一种在redis服务器端执行的脚本语言，用于执行一系
 
 ---
 ### redis的发布/订阅模式是什么？怎么使用？
-
 是一种消息通信模式，发布者将消息发送到一个或多个频道，订阅者监听特定频道的消息。
 
 - SUBSCRIBE channel [channel...] 订阅给定的一个或多个频道；
@@ -449,7 +446,6 @@ Lua脚本是一种在redis服务器端执行的脚本语言，用于执行一系
 
 ---
 ### redis的限流是什么？如何实现限流？
-
 是控制访问速率的机制，防止某个资源被过度使用，比如API、数据库查询。用于流量控制、服务降级。
 
 Redis中的限流算法有：
@@ -479,7 +475,6 @@ Redis中的限流算法有：
 
 ---
 ### redis集群主从数据同步会带来什么问题，数据不同步怎么解决？
-
 - 忽略：根据业务特点，如果业务能接收不一致就最好
 - 强制读主：使用一个高可用主库提供数据服务，读和写都从主库操作，可以采用缓存来提升系统读性能
 - 选择性读主节点：在cache里记录哪些记录发生过写请求，来路由读主还是读从
@@ -510,7 +505,6 @@ Redis中的限流算法有：
 
 ---
 ### redis哨兵(Redis Sentinel)是什么？如何使用哨兵？
-
 哨兵是redis会监控集群内主从节点的运行状态，当主节点宕机，会故障转移，选举新的主节点。
 
 主要功能：
@@ -541,7 +535,6 @@ redis使用一致性哈希将数据分布在多个实例上，实现负载均衡
 ### 为什么使用snowflake算法，相比MySQL自增主键呢？
 两个都是生成唯一标识符的方法。
 snowflake是用在分布式环境，生成全局唯一ID，MySQL自增主键使用于单个数据库实例。
-
 
 ---
 ### 如何通过Set实现共同关注
