--- a/_posts/interviews/2023-03-14-分布式.md
+++ b/_posts/interviews/2023-03-14-分布式.md
@@ -11,13 +11,15 @@ tags:
 ---
   
 ### 有哪些分布式一致算法？分布式一致性协议？
-
-分布式一致性算法：是在分布式系统中保持一致性的技术，确保在分布式环境中即使出现故障，比如网络分区、节点崩溃等，系统仍然能够保持一致性或最终一致性。
-
+分布式一致性算法：在一个可能发生故障的分布式系统中，如何对某个值达成共识，保证系统的一致性。
 1. Paxos
 - 核心思想：
   - 通过多轮提案(proposal)机制，在多个节点之间达成一致。
   - 包括三个角色：Proposer、acceptor、Learner。
+  - Proposer提出提案，每个提案包含一个唯一的编号和要达成一致的值；
+  - Acceptor接收或拒绝提案；
+  - Learner学习已经达成一致的结果，不参与决策过程，只接收最终的结果。
+  算法流程：1. Prepare阶段 2. Accept阶段
 2. Raft
 - 核心思想：
   - 将共识问题分解为领导选举、日志复制、安全性三个子问题。
@@ -30,8 +32,8 @@ tags:
 - 应用场景：ZooKeeper，用于分布式锁、配置管理、服务发现。
 4. 2PC
 - 核心思想：
-  - **准备**阶段：协调者询问所有参与者是否可以提交事务
-  - **提交**阶段：如果所有参与者都同意，则协调者通知提交；否则回滚
+  - 准备阶段：协调者询问所有参与者是否可以提交事务
+  - 提交阶段：如果所有参与者都同意，则协调者通知提交；否则回滚
 - 特点：存在单点故障
 - 应用场景：MySQL的XA事务
 5. 3PC
@@ -40,8 +42,25 @@ tags:
 8. Chord：将数据分布到一个逻辑环上，每个节点负责一部分数据，P2P文件共享系统
 
 ---
-### 系统的CAP性质？如何保证AP和CP？
+### 分布式事务解决方案？
+1. 2PC
+ - 原理：将事务过程分为准备(Prepare)和提交(Commit)两个阶段，由事务协调器（TM）和事务参与者（RM）共同完成
+ - 准备阶段：:TM 向所有RM发送Prepare消息，RM执行事务操作，并将Undo/Redo日志写入本地，但不提交事务，并将执行结果返回给TM。
+ - 提交阶段：:TM根据RM的执行结果，向所有RM发送Commit或Rollback消息。RM收到Commit消息则提交事务，收到Rollback消息则回滚事务，并释放锁资源。
+2. **TCC**（try-confirm-cancel）
+ - Try阶段：:尝试执行业务，预留资源。
+ - Confirm阶段：:确认提交，正式操作。
+ - Cancel阶段：:如果try阶段或confirm阶段有某个参与方失败，则回滚操作，释放资源。
 
+分布式事务框架？
+1. Seata
+ - Transaction Coordinator (TC)：事务协调者，维护全局和分支事务的状态，驱动全局事务提交或回滚。
+ - Transaction Manager (TM)：事务管理器，定义全局事务的范围：开始全局事务、提交或回滚全局事务。
+ - Resource Manager (RM)：资源管理器，管理分支事务处理的资源，与TC交谈以注册分支事务和报告分支事务的状态，并驱动分支事务提交或回滚。
+2. TCC Tracsaction
+
+---
+### 系统的CAP性质？如何保证AP和CP？
 在分布式系统设计中，CAP理论指出任何网络分区下的分布式系统最多只能满足以下三个条件中的两个：
 
 - Consistency：一致性，所有节点在同一时刻看到的数据都是相同的；
@@ -59,24 +78,6 @@ tags:
 > 对于一致性要求极高的交易性数据采用CP模式；
 
 > 对于用户体验影响较大但实时性要求较高的查询采用AP模式；
-
----
-### Paxos算法原理讲解一下？
-
-Paxos将节点分成三个角色：Proposer、Acceptor、Learner
-- Proposer提出提案，每个提案包含一个唯一的编号和要达成一致的值；
-- Acceptor接收或拒绝提案；
-- Learner学习已经达成一致的结果，不参与决策过程，只接收最终的结果。
-
-算法流程：
-1. Prepare阶段
-
-2. Accept阶段
-
----
-### ZooKeeper等应用分布式协议的中间件有哪些？
-- ZooKeeper：使用ZAB协议
-- Etcd：使用Raft一致性算法
 
 ---
 ### 数据仓库和数据湖的区别？
