--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -177,6 +177,18 @@ tags:
 3. 无状态服务：服务拆分(秒杀服务独立部署)
 4. 降级策略：熔断(如Hystrix)
 
+采用微服务架构，用户服务、商品服务、订单服务。将不同逻辑分散到不同服务上。
+负载均衡：使用nginx进行请求分发，
+缓存机制：用redis缓存热点数据，减少数据库压力。
+库存扣减策略：用户支付完之后再扣库存。
+
+静态秒杀页面
+redis存储库存，缓存预热，分布式锁
+
+乐观锁解决超卖问题：update product set stock=stock-1 where id=product and stock > 0; 后面加上了stock > 0,就不会超卖了。 
+
+秒杀后，发送mq消息，下单服务消费mq消息。如何防止消息丢失呢？记录消费发送表
+
 ---
 ### 订单号生成有什么方案？如何保证全局唯一？
 1. snowflake算法，时间戳+机器ID+序列号
