--- a/_posts/interviews/2025-06-09-Flink.md
+++ b/_posts/interviews/2025-06-09-Flink.md
@@ -20,13 +20,15 @@ tags:
 2. 然后生成JobGraph，提交到JobManager上，
 3. JobManager会生成ExecutionGraph
 4. JobManager会根据执行图生成Task，把Task提交到TaskManager上。
-5. 有TaskManager来执行Task。 整个流程就是这样的。
+5. 由TaskManager来执行Task。 整个流程就是这样的。
+
+![img.png](../../assets/flink/img.png)
 
 ---
 ### Flink on Yarn提交作业的流程？
 1. 提交jar包之后会提交到Yarn ResourceManager上
 2. ResourceManager会分配一个Container给Flink ApplicationMaster，在ApplicationMaster中启动JobManager
-3. JobManager会请求资源slots，Flink会向Yarn ResourceManger请求Container启动mTaskManager,
+3. JobManager会请求资源slots，Flink会向Yarn ResourceManger请求Container启动TaskManager,
 4. TaskManager启动之后，会提供slots，
 5. JobManager把执行的Task分发给TaskManager,开始执行任务
 
@@ -36,8 +38,6 @@ tags:
 2. JobGraph：StreamGraph在Client中经过算子chain链合并等优化后，转换成JobGraph，提交给JobManager
 3. ExecutionGraph：JobManager会将JobGraph装换成ExecutionGraph
 4. 最后是物理执行图
-
-
 
 ---
 ### WindowFunction、ProcessWindowFunction
@@ -168,13 +168,9 @@ public <R> SingleOutputStreamOperator<R> reduce(
 ---
 ### 什么是Flink窗口，为什么流处理需要窗口？Flink支持哪些类型的窗口？
 将无界数据流切分成数据块进行处理，在窗口上执行聚合操作。
-
 1. 滚动窗口Tumbling Window：固定大小，不重叠
-
 2. 滑动窗口Sliding Window：固定大小，可重叠
-
 3. 会话窗口Session Window：活动间隙界定，大小不固定
-
 
 > Flink中的窗口算子一般会配置Keyed类型数据集操作，并结合watermark和定时器，提供时间语义的统计。
 - Windows Assigner：定义窗口的类型(数据流分配到多长时间间隔的哪种窗口，比如1min的滚动窗口)
@@ -299,7 +295,6 @@ checkpoint是创建状态快照的，可以实现故障恢复、保证exactly-on
 2. TaskManager的内存管理 
  - jvm堆内内存：包括框架堆内内存和任务堆内内存
  - 堆外内存：
-
 
 ---
 ### Flink有哪些优化的措施
