--- a/_posts/interviews/2025-06-09-Spark.md
+++ b/_posts/interviews/2025-06-09-Spark.md
@@ -14,16 +14,16 @@ tags:
 ### Spark的架构和组件？
 **spark架构，运行机制，组件**
 1. Driver：是我们写的主程序，会解析代码生成DAG图，划分Stage和task，负责作业的提交和调度；
-2. Cluster Manager：分配管理集群资源，比如YARN
+2. Cluster Manager：分配管理集群资源，比如YARN(Yarn resource manager)
 3. Worker Node：集群中的worker节点，运行executor进程
 4. Executor：worker node上的进程，负责实际执行task任务
 5. DAG Scheduler：将一个job作业根据Shuffle拆分成多个Stage，每个stage里面是一个pipeline
 6. Task Scheduler：将stage里的task分发给executor执行
 
 7. RDD、DataSet、DataFrame：
-- RDD：表示一个分布式数据集合，支持两种操作，Transformation(map,filter,flatMap)、Action(collect,count,saveAsTextFile)，不可变，但是可以通过转换操作生成新的RDD；弹性的，支持自动容错和数据恢复；分布式的，数据分布在多个节点上；可以从HDFS数据源加载数据；
-- DataFrame：类似于数据库的表，支持SQL操作；高效查询；支持SQL查询；支持DataFrame操作，select,filter,join,groupBy
-- DataSet：类型安全的数据集合，结合了RDD和DataFrame的优点，适合需要类型安全和高性能优化的场景。
+- RDD：表示一个弹性数据集合，支持两种操作，Transformation(map,filter,flatMap)、Action(collect,count,saveAsTextFile)，不可变，但是可以通过转换操作生成新的RDD；弹性的，支持自动容错和数据恢复；分布式的，数据分布在多个节点上；可以从HDFS数据源加载数据；
+- DataFrame：带有元数据schema，每一列都带有名称和类型，可以认为是RDD+schema的组合。类似于数据库的表，支持SQL操作；高效查询；支持SQL查询；支持DataFrame操作，select,filter,join,groupBy
+- DataSet：RDD和DataFrame可以调用toDS转换成DataSet，需要指定case class。类型安全的数据集合，结合了RDD和DataFrame的优点，适合需要类型安全和高性能优化的场景。
 
 **Spark任务执行流程， Spark工作流程**：
 1. 首先我们通过Spark-submit提交任务的时候，会指定jar包和主类；
@@ -31,6 +31,8 @@ tags:
 3. 当代码执行Action算子操作时会触发job的执行，DAG Scheduler会根据RDD的依赖关系生成DAG图，根据宽依赖Shuffle划分成多个stage；
 4. 每个stage对应一个taskset，taskset里有很多task。Task Scheduler会把taskset中的task分发给executor；
 5. 最后就是executor读取数据执行具体的task任务
+
+![img.png](../../assets/spark/img.png)
 
 **Job，Stage，Task区别**：
 1. Job是一个完整的计算任务，包含多个Stage
@@ -61,9 +63,7 @@ executor的内存是建立在JVM内存之上，堆内内存是由JVM直接管理
  - foreach
  - saveAsTextFile
 
----
-### transformation和action算子有什么区别？
-
+transformation和action算子有什么区别？
 1. transformation是得到一个新的RDD，方式很多，比如从数据源生成一个新的RDD，从RDD生成一个新的RDD
 2. action是得到一个值，或者一个结果
 
@@ -77,10 +77,9 @@ executor的内存是建立在JVM内存之上，堆内内存是由JVM直接管理
 
 ---
 ### 使用Spark有什么需要注意的地方？
-
 1. 内存管理：Spark依赖内存，配置集群的内存设置是很重要的
  - 配置合理的Executor和Driver内存大小(通过spark.executor.memory和spark.driver.memory)
- - 尽量减少Shufffle操作：控制Shuffle操作的数量，因为Shuffle会消耗大量内存
+ - 尽量减少Shuffle操作：控制Shuffle操作的数量，因为Shuffle会消耗大量内存
  - 选择合适的序列化：Spark使用序列化在集群节点间传输数据，使用Kryo序列化(spark.serializer=org.apache.spark.serializer.KryoSerializer)减少序列化和反序列化的开销
 2. 数据分区：Spark将数据分区到集群的不同的节点上，并行处理，理解数据是怎么分区的，怎么控制分区实现最优性能表现
  - 确保分区数量合理。分区过多会导致过多的任务调度开销；分区过少会降低并行度；
@@ -106,6 +105,14 @@ executor的内存是建立在JVM内存之上，堆内内存是由JVM直接管理
 - 查看task执行的日志，耗时、数据量。
 - 然后判断是发生了什么问题，是数据倾斜、还是网络问题、还是外部IO阻塞的问题。
 
+1. 避免创建重复的RDD
+2. 多次使用的RDD可以持久化
+3. 尽量避免使用shuffle操作，使用预聚合的shuffle算子，比如reduceByKey
+4. 使用高性能的算子，比如用mapPartitions替代map，会一次处理一个partition的数据，而map是一个数据一个数据处理的
+5. 使用filter之后，再使用coalesce减少分区数
+6. 广播大变量
+7. 使用Kryo优化序列化
+
 ---
 ### reduceByKey与groupByKey有什么区别？
 1. reduceByKey包含了分组和聚合两个操作，groupByKey只是分组；所以一般groupByKey之后还会接一个map操作，对分组后的每个组进行聚合。
@@ -124,20 +131,6 @@ val wordCountsWithGroup = wordPairsRDD
   .map(t => (t._1, t._2.sum))
   .collect()
 ```
-
----
-### spark RDD， 与DataFrame和DataSet的区别？
-RDD是Spark的弹性分布式数据集，表示一个元素集合，RDD里的数据可以分布在不同的节点上。
-
-核心特性：
-1. 不可变：对RDD做转换之后会生成新的RDD；
-2. RDD的数据是分布在不同分区的，每个分区分布在集群不同的节点上；
-3. RDD有自动的容错机制，假设某个分区数据丢失，还是可以重新计算，重建出来；
-4. RDD支持很多操作，比如map、filter、union、groupByKey、reduceByKey
-
-- RDD：弹性分布式数据集，不可变、可分区
-- DataFrame：带有元数据schema，每一列都带有名称和类型，可以认为是RDD+schema的组合
-- DataSet：RDD和DataFrame可以调用toDS转换成DataSet，需要指定case class。
 
 ---
 ### Spark广播怎么使用？Spark需要join一个大表和一个小表时应该怎么优化使用？
@@ -171,9 +164,7 @@ result = large_table.map(lambda x: (x[0], (x[1], broadcast_table.value.get(x[0])
 
 ---
 ### Spark遇到数据倾斜怎么处理？
-
 数据倾斜：某些分区的数据大于其他分区
-
 (1) 先确认是否存在数据倾斜
  - 先通过Spark UI查看任务执行时间分布，如果某个任务的执行时间远大于其他任务，那么可能有数据倾斜；
  - 使用日志或调试工具查看每个分区的数据量；
@@ -181,7 +172,6 @@ result = large_table.map(lambda x: (x[0], (x[1], broadcast_table.value.get(x[0])
 ```scala
 rdd.mapPartitions(iter => Array(iter.size).iterator).collect().foreach(println)
 ```
-
 (2) 解决数据倾斜方法
 1. 调整分区数：
  - 通过repartition或coalesce方法增加分区数量，把数据分散到更多的分区里
@@ -299,7 +289,7 @@ Spark有很多可以调优的配置参数，以下是一些常用的参数：
 
 ---
 ### Spark shuffle是什么？哪些操作会触发shuffle？为什么shuffle对性能影响巨大？
-本质是数据重分布过程，需要讲分散在集群不同节点上的数据按照特定规则进行重组时，就需要shuffle
+本质是数据重分布过程，把多个节点上的同一个key，拉取到同一个节点上，进行聚合或join操作，比如reduceByKey，join操作，都会触发shuffle操作。
 
 会触发shuffle的操作：
 1. repartition
@@ -320,10 +310,6 @@ shuffle影响性能的核心原因
 
 ---
 ### 为什么有shuffle
-
-**什么是shuffle：**
-shuffle就是把多个节点上的同一个key，拉取到同一个节点上，进行聚合或join操作，比如reduceByKey，join操作，都会触发shuffle操作。
-
 **为什么会有shuffle：**
 因为RDD是分布式数据集，数据分布在多个节点上，如果要执行聚合就得把其他节点上的数据通过网络拉取到一起进行操作。
 
@@ -365,7 +351,6 @@ Shuffle Read流程：
 
 ---
 ### Spark Shuffle的关键配置参数有哪些
-
 1. spark.shuffle.file.buffer:Map端写缓冲区大小
 2. spark.reducer.maxSizeInFlight:Reduce端单次请求最大数据量
 3. spark.shuffle.io.maxRetries:Shuffle读取失败最大重试次数
