--- a/_posts/interviews/数据库/2023-03-14-数据库.md
+++ b/_posts/interviews/数据库/2023-03-14-数据库.md
@@ -162,7 +162,6 @@ MySQL服务端主要由连接器、解析器、优化器、存储引擎组成。
 2. 主从部署：主从复制架构
 3. 集群部署
 
-
 ---
 ### 主从复制过程
 1. 主库接收到客户端的更新，写数据到binlog
@@ -413,6 +412,12 @@ spring:
 5. 虽然在where条件里a排在前面，但是a是范围查询，sql优化器会先判断b和c，再判断a条件，所以创建索引的时候应该bc在前，a在后面
 
 > 最后创建的两个联合索引是(b,d,a,c)和(c,d,a,b)。
+
+---
+### 数据库大表新增一列如何新增，有什么问题？
+
+---
+### 分页查询性能差，如何解决
 
 ---
 ### sql实现，实现一个死锁情况，必须是必然发生
