--- a/_posts/interviews/2023-03-14-Kafka.md
+++ b/_posts/interviews/2023-03-14-Kafka.md
@@ -191,6 +191,15 @@ Kafka的特性：
 ---
 ### 消息队列的重复消费、消息丢失、消息顺序等问题如何保证？
 
+1. 消息不丢失
+ - 发送端回调
+ - 消费端消费完后手动提交offset
+ - kafka设置acks = all
+
+2. 重复消费
+ - 消费端做幂等校验
+ - 手动提交offset，接收到就提交，允许消息延迟的情况，可能会丢失，之后做兜底。
+
 ---
 ### Kafka的消息保证机制有哪些？如何保证消息的可靠性(消息丢失)？
 **什么叫消息可靠性**：就是确保消息一定能发送到服务器进行存储，并且发生宕机可以从备份数据中恢复。
@@ -233,7 +242,7 @@ Kafka的特性：
 保证相同key的消息被分配到同一个分区中，从而保证消息的有序性。
 
 如何保证消息不丢失？ 
-1. 生产端丢失：调用send方法发送之后使用回调函数判断是否发送成功
+1. 生产端丢失：回调函数判断是否发送成功
 2. 消费端丢失：关闭自动提交offset，只有真正消费了之后才提交offset值。但是会带来重复消费的问题
 3. Kafka丢失：设置acks=all，只有全部副本都收到消息才表示发送成功，但是这样延迟会很高；设置replication.factor>=3,保证每个分区有至少3个副本，保证数据安全；
 min.insync.replica>=1,代表消息至少要被写入两个副本才表示发送成功。
