--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -9,6 +9,7 @@ tags:
   - Interview
   - Redis
 ---
+
 # Redis面试题
 
 ---
@@ -46,12 +47,20 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 - 多种事件处理器（命令请求处理器、命令回复处理器、连接应答处理器、主从连接处理器）
 
 ---
+### 一条redis命令如何执行的？
+1. 客户端发送命令
+2. 通过socket套接字连接
+3. IO多路复用程序处理连接，接收文件事件
+4. 文件事件分派器将文件事件分配给不同的事件处理器
+5. 命令执行，内存操作，返回结果
+
+---
 ### redis数据结构
 1. String字符串：由SDS简单动态字符串构成
 2. List列表：由LinkedList、QuickList、ZipList构成
 3. Hash字典：由HashTable、ZipList构成
 4. Set集合：由IntSet、ZipList构成
-5. ZSet有序集合：由SkipList、ZipList构成
+5. ZSet有序集合：由SkipList + 哈希表构成
 
 - SDS简单动态字符串
 - ZipList压缩列表：很通用，上面由四种数据结构都有这种实现。节省缓存，数据连续存储，减少内存碎片
@@ -92,7 +101,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
   - 关注/粉丝系统，维护用户的关注列表和粉丝列表。
   - 随机抽取元素，如抽奖活动中的中奖名单抽取。
 
-5. **Sorted Set / Zset有序集合** 与集合类似，但每个元素关联了一个分数（score），通过分数来为成员排序。
+5. **Zset有序集合** 与集合类似，但每个元素关联了一个分数（score），通过分数来为成员排序。
 **适用场景**：
   - 排行榜，根据用户的分数排序显示排行榜。
   - 带权重的任务调度系统，优先处理分数较高的任务。
@@ -567,3 +576,4 @@ key中可以包括用户id，日期信息，这样可以获取某个用户在某
 smember会返回集合内的全部数据，可能导致内存溢出，或网络传输开销大，导致执行时间较长。
 1. 分批获取数据
 2. 压缩数据
+
