--- a/_posts/interviews/2025-06-09-Spark.md
+++ b/_posts/interviews/2025-06-09-Spark.md
@@ -21,7 +21,7 @@ tags:
 6. Task Scheduler：将stage里的task分发给executor执行
 
 7. RDD、DataSet、DataFrame：
-- RDD：表示一个弹性数据集合，支持两种操作，Transformation(map,filter,flatMap)、Action(collect,count,saveAsTextFile)，不可变，但是可以通过转换操作生成新的RDD；弹性的，支持自动容错和数据恢复；分布式的，数据分布在多个节点上；可以从HDFS数据源加载数据；
+- RDD：表示一个弹性分布式数据集合，支持两种操作，Transformation(map,filter,flatMap)、Action(collect,count,saveAsTextFile)，不可变，但是可以通过转换操作生成新的RDD；弹性的，支持自动容错和数据恢复；分布式的，数据分布在多个节点上；可以从HDFS数据源加载数据；
 - DataFrame：带有元数据schema，每一列都带有名称和类型，可以认为是RDD+schema的组合。类似于数据库的表，支持SQL操作；高效查询；支持SQL查询；支持DataFrame操作，select,filter,join,groupBy
 - DataSet：RDD和DataFrame可以调用toDS转换成DataSet，需要指定case class。类型安全的数据集合，结合了RDD和DataFrame的优点，适合需要类型安全和高性能优化的场景。
 
@@ -42,7 +42,7 @@ tags:
 ---
 ### spark的内存管理
 一般有driver进程和executor进程，driver进程中比较简单，主要分析executor内的内存。
-executor的内存是建立在JVM内存之上，堆内内存是由JVM直接管理，堆外内存直接向操作系统进行内存的申请和释放，
+executor的内存是建立在JVM内存之上，堆内内存是由JVM直接管理，堆外内存直接向操作系统进行内存的申请和释放。
 
 ---
 ### 列举spark中的transformation算子和action算子
@@ -55,7 +55,7 @@ executor的内存是建立在JVM内存之上，堆内内存是由JVM直接管理
  - sortByKey
 2. action算子
  - reduce：将所有元素聚合成单个值，比如累加，乘法
- - collect：将 RDD中的所有元素收集到驱动程序的内存中，返回一个数组。可能导致driver的OOM
+ - collect：将 RDD中的所有元素收集到Driver程序的内存中，返回一个数组。可能导致driver的OOM
  - first
  - take
  - aggregate：接收一个初始值，和两个函数，对分区内的数据基于初始值使用第一个函数聚合；对分区之间的数据基于初始值使用第二个函数聚合。
@@ -70,12 +70,6 @@ transformation和action算子有什么区别？
 > 所有的transformation都是采用的懒策略，就是如果只是将transformation提交是不会执行计算的，计算只有在action被提交的时候才被触发。
 
 ---
-### Spark的部署和集群管理？
-
----
-### Spark的实战应用
-
----
 ### 使用Spark有什么需要注意的地方？
 1. 内存管理：Spark依赖内存，配置集群的内存设置是很重要的
  - 配置合理的Executor和Driver内存大小(通过spark.executor.memory和spark.driver.memory)
@@ -83,7 +77,7 @@ transformation和action算子有什么区别？
  - 选择合适的序列化：Spark使用序列化在集群节点间传输数据，使用Kryo序列化(spark.serializer=org.apache.spark.serializer.KryoSerializer)减少序列化和反序列化的开销
 2. 数据分区：Spark将数据分区到集群的不同的节点上，并行处理，理解数据是怎么分区的，怎么控制分区实现最优性能表现
  - 确保分区数量合理。分区过多会导致过多的任务调度开销；分区过少会降低并行度；
- - 使用repartition或coalesce调增分区数，但要注意repartition会触发Shuffle，而coalesce不会
+ - 使用repartition或coalesce调整分区数，但要注意repartition会触发Shuffle，而coalesce不会
  - 避免数据倾斜，即某些分区的数量远大于其他分区。可以通过自定义分区器或预处理数据来缓解。
 3. Shuffle操作
  - 尽量减少Shuffle操作(避免不必要的groupByKey和join)
