--- a/_posts/interviews/java基础/2025-06-22-java线程池.md
+++ b/_posts/interviews/java基础/2025-06-22-java线程池.md
@@ -50,7 +50,7 @@ tags:
 ### 线程上下文保留了哪些东西
 指在JVM里的话
 - java虚拟机栈里保存的内容，比如局部变量表、操作数栈、方法调用栈
-- 程序技术器里保存的当前线程执行的字节码行号
+- 程序计数器里保存的当前线程执行的字节码行号
 - 线程的局部存储
 - 线程持有的锁状态，也就是线程持有的monitor
 
