--- a/_posts/interviews/数据库/2023-03-14-数据库.md
+++ b/_posts/interviews/数据库/2023-03-14-数据库.md
@@ -135,7 +135,7 @@ MySQL服务端主要由连接器、解析器、优化器、存储引擎组成。
 ### 慢查询sql应该如何排查定位？如何优化？
 1. 确认慢查询的原因：确认是哪些sql语句导致了慢查询，可以使用mysql的**慢查询日志**（slow query log）来查看；
 2. 分析查询执行计划：使用explain命令来分析查询执行计划（会给出查询类型、表的连接方式、使用的索引信息），
-确定查询语句的优化方向；关注type(访问类型all全表扫描index索引扫描range范围扫描)、key(实际使用的索引)、rows(扫描的行数)、extra(比如using filesort、using temporary)
+确定查询语句的优化方向；关注type列(访问类型all全表扫描index索引扫描range范围扫描)、key(实际使用的索引)、rows(扫描的行数)、extra(比如using filesort(排序时使用了外部的索引排序，没有用到表内索引进行排序)、using temporary(需要创建临时表存储查询结果，常见于order by 和 group by))
 3. 优化查询语句：通过优化查询语句（比如添加索引、使用合适的查询语句等）来提高查询性能
 4. 调整mysql参数：可以通过调整mysql的参数（如缓存大小、连接数（mysql使用连接池））来提高查询性能
 5. 拆分大查询：对于大查询语句，可以考虑拆分成多个小查询语句（分页查询、分区查询、并行查询），以减少查询负载
