--- a/_posts/interviews/数据库/2025-06-22-数据库事务.md
+++ b/_posts/interviews/数据库/2025-06-22-数据库事务.md
@@ -63,7 +63,7 @@ Next-Key Lock：这是InnoDB默认的锁定策略，结合了**行锁+间隙锁*
 
 ---
 ### MVCC在InnoDB中是如何实现的？MVCC的原理
-在MVCC中，每个事务在读取数据时会看到一个独立的快照版本，而不是看到其他并发事务正在修改的版本。这个快照版本是通过在每个数据行上添加隐藏的事务版本号来实现的。
+在MVCC中，每个事务在读取数据时会看到一个独立的快照版本，而不是看到其他并发事务正在修改的版本。这个快照版本是通过在每个数据行上添加隐藏的事务版本号来实现的。InnoDB会为每行数据添加三个隐藏字段：DB_TRX_ID(最后一次插入或更新该行的事务id)、DB_ROLL_PTR(回滚指针)、DB_ROW_ID(如果没有设置主键且该表没有唯一非空索引时，InnoDB会使用该id来生成聚簇索引)。
 
 **底层实现：** 通过undo log版本链和ReadView机制来实现。**undo log保存历史快照，readView可见性规则帮助判断读取哪个版本的数据。**
 1. Undo log版本链：每行数据保存多个历史版本，通过事务ID和回滚指针连接
@@ -85,7 +85,7 @@ Next-Key Lock：这是InnoDB默认的锁定策略，结合了**行锁+间隙锁*
   通常会有一个全局的版本分配器来为每一行数据设置版本号，版本号是唯一的。
 
 ---
-### 可重复读事务隔离级别的实现原理？
+### 可重复读事务隔离级别RR的实现原理？
 - 读取数据的时候，事务对当前被读取的数据不加锁，并且是快照读，读取事务开始时的数据快照，不是最新数据，通过MVCC实现；
 - 更新数据的时候，事务在更新数据的瞬间，必须对数据加行级排它锁（record lock,gap lock,next-key lock）,直到事务结束才释放。
 
