--- a/_posts/interviews/数据库/2025-06-22-数据库索引.md
+++ b/_posts/interviews/数据库/2025-06-22-数据库索引.md
@@ -135,7 +135,7 @@ B+树特点：
 
 ---
 ### 主键索引和其他辅助索引在B+树上有什么不同？
-1. 主键索引：不重复(唯一)、不为空的列；如果没有指定，InnoDB会自动生成一个隐藏列作为主键索引
+1. 主键索引：唯一、不为空的列；如果没有指定，InnoDB会自动生成一个隐藏列作为主键索引
 - 叶子节点存放的是索引键值和数据行的所有列数据
 2. 辅助索引：可以重复(除非是唯一索引)；
 - 叶子节点是索引键值和对应的主键值，不是整行数据，根据这个主键值去主键索引查找完整数据行，这种两次查找的过程称为"回表".
