--- a/_posts/interviews/面经/2025/2025-06-26-蚂蚁电话面.md
+++ b/_posts/interviews/面经/2025/2025-06-26-蚂蚁电话面.md
@@ -41,6 +41,16 @@ Paxos、Raft、ZAB
 ---
 ### volatile 原理？
 
+---
+### 分片广播后数据量还是很大怎么办？
 
 ---
-### 
+### 离职原因？为什么gap这么久
+
+---
+### 如何保证及时性？
+
+---
+### 难点？多分支怎么做的？
+
+
