--- a/_posts/interviews/java基础/2026-06-22-java垃圾回收.md
+++ b/_posts/interviews/java基础/2026-06-22-java垃圾回收.md
@@ -42,8 +42,8 @@ tags:
 常见的垃圾回收算法有：
 1. 标记-清除：从根出发，标记所有可以到达的对象，不可到达的对象会回收。该算法的缺点是会产生内存碎片，影响内存利用效率。
 2. 标记-整理：首先进行标记，然后将所有存活的对象移动到内存的一端，然后清除另一端的所有对象。这个算法的优点是不会产生内存碎片，但是需要移动对象，影响效率。
-3. 复制：把堆分成同样的大小的两块，每次只使用其中一块，当这一块用完了，就将活跃对象复制到另一块，同时清空原来的块。通常使用在新生代。该算法的缺点是每次只能使用一般的内存空间，适用于存活对象比较少的情况。
-4. 分代收集：将堆内存分成几个代空间，有新生代，老年代，不同代的垃圾回收使用不同的算法，比如新生代会使用复制算法，老年代会使用标记-清除或标记-整理算法。新生代回收时，会将活着的对象复制到另一个空间，原来的空间清理掉，这个过程叫Minor GC；当对象在新生代回收过很多次还存在的时候，会被晋升到老年代，当老年代满了的时候会发生Full GC
+3. 复制：把堆分成同样的大小的两块，每次只使用其中一块，当这一块用完了，就将活跃对象复制到另一块，同时清空原来的块。通常使用在新生代。该算法的缺点是每次只能使用一半的内存空间，适用于存活对象比较少的情况。
+4. 分代收集：将堆内存分成几个代空间，有新生代、老年代，不同代的垃圾回收使用不同的算法，比如新生代会使用复制算法，老年代会使用标记-清除或标记-整理算法。新生代回收时，会将活着的对象复制到另一个空间，原来的空间清理掉，这个过程叫Minor GC；当对象在新生代回收过很多次还存在的时候，会被晋升到老年代，当老年代满了的时候会发生Full GC
 
 为什么用分代收集：
 分代收集会根据对象的生命周期长短，将内存划分成不同的代，对不同代采用不同的回收频率和回收算法，提高回收效率，降低性能开销。
@@ -69,12 +69,12 @@ tags:
 
 G1的优点：
 1. 分区收集，优先回收垃圾最多的区域，而不是整个堆，这样的话可以更灵活控制回收时间；
-2. 可预测的停顿时间，G1提供一个参数叫-XX：MaxGCPauseMillis，每次垃圾回收时尽量控制停顿时间不超过这个值，G1会根据目标停顿时间和当内存使用的情况，动态调整每次回收的区域数量，从而实现更稳定的停顿时间；
+2. 可预测的停顿时间，G1提供一个参数叫-XX：MaxGCPauseMillis，每次垃圾回收时尽量控制停顿时间不超过这个值，G1会根据目标停顿时间和内存使用的情况，动态调整每次回收的区域数量，从而实现更稳定的停顿时间；
 3. 可以避免内存碎片：G1会在垃圾回收时将存活对象复制到其他区域，较少Full GC的频率。
 
 G1回收过程：
 1. 初始标记：暂停所有用户线程，标记直接可达的根对象，比如全局变量、栈帧中的引用。这个过程会很快；
-2. 并发标记：用户线程继续运行，垃圾回收线程开始并发执行，从初始标记阶段标记的根对象开始，遍历整个堆，进行**可达性分析**，标记所有可达的对象。这个时候因为用户线程还在并发运行，所有可能会有新的对象被创建或者对象引用关系发生了变化，G1会通过Remembered Set（记忆集）来记录这些变化；
+2. 并发标记：用户线程继续运行，垃圾回收线程开始并发执行，从初始标记阶段标记的根对象开始，遍历整个堆，进行**可达性分析**，标记所有可达的对象。这个时候因为用户线程还在并发运行，所以可能会有新的对象被创建或者对象引用关系发生了变化，G1会通过Remembered Set（记忆集）来记录这些变化；
 3. 最终标记：会根据并发标记阶段记录的对象修改，最终标记哪些对象是存活，哪些对象是垃圾
 
 Young Collection-> Young Collection + Concurrent Mark -> Mixed Collection -> Full GC
@@ -85,7 +85,7 @@ Young Collection-> Young Collection + Concurrent Mark -> Mixed Collection -> Ful
 2. MinorGC会清除Eden区的没有被GC roots标记的对象，存活的对象会被复制到Survivor From区，然后标记这些对象的分代年龄为1；
 3. Eden内存不够又会触发一次MinorGC，一样清理垃圾，From区也会被清理，没有被清理的对象会被复制到To区，清理Eden区和From区，然后From和To区互换，原来的To区成为下一次GC时的From区；
 4. 一直这样重复，如果对象的分代年龄达到了15次，这个对象就会被复制到老年代；(对象头mark word里分代年龄字段是4bit，最大是1111，所以是15)
-5. 老年代内存不够时会触发Full GC清理整个堆空间，包括新生代和老年代。这个时候会会停止所有用户线程；
+5. 老年代内存不够时会触发Full GC清理整个堆空间，包括新生代和老年代。这个时候会停止所有用户线程；
 6. 如果Full GC后还没有更多的空间存放新对象就会发生OOM。
 
 分配规则？
@@ -122,7 +122,6 @@ TLAB
 > 方法区是规范。永久代和元空间都是实现。
 > 在jdk1.8之前，方法区的实现是用永久代；在jdk1.8之后，方法区的实现是用元空间，并且不再使用虚拟机内存而是本地内存。
 
-
 ---
 ### 三色标记？
 
@@ -136,8 +135,8 @@ TLAB
 2. 标记阶段：标记阶段从灰色对象开始，检查它所引用的所有对象；
 - 如果被引用对象是白色，将它标记成灰色，加入到待处理列表中；
 - 如果被引用对象已经是灰色或黑色，就不用处理；
-3. 完成阶段：当没有灰色对象需要被处理时候，标记阶段结果；这个时候，如果还有白色对象剩余，就认为是不可达的垃圾，可以被回收；
+3. 完成阶段：当没有灰色对象需要被处理时候，标记阶段结束；这个时候，如果还有白色对象剩余，就认为是不可达的垃圾，可以被回收；
 
-但是因为应用线程和垃圾收集线程同时运行，所以会导致一些问题，比如"悬挂指针"问题。这个时候可以用一下策略解决：
+但是因为应用线程和垃圾收集线程同时运行，所以会导致一些问题，比如"悬挂指针"问题。这个时候可以用以下策略解决：
 1. 写屏障：每次修改对象图时候，都会触发写屏障机制。可以记录对象间引用关系的变化；
 2. 增量更新(Incremental Update)或原始快照(SATB): SATB记录在GC开始前已经存在的对象状态；
