--- a/_posts/算法/剑指offer专项突破版/2023-03-29-第一部分.md
+++ b/_posts/算法/剑指offer专项突破版/2023-03-29-第一部分.md
@@ -34,7 +34,7 @@ tags:
 ![img.png](../../../assets/img/img.png)
 但是这样的时间复杂度是O(n)，可不可以减少试的次数，最好试完一个2相加后下一个直接试七个2相加，这肯定没法做到，因为计算七个2相加时我们没法直接知道七个2相加就是12+2，12这个值没法在计算一个2相加时就得到。
 所以回过头来看，当我们计算完一个2相加后得到的值是2，之后可以计算两个2相加即2+2=4，得到4之后就可以试四个2相加即4+4=8，之后再试八个2相加即8+8...如下图所示。
-![img.png](../../../assets/img2/img.png)
+![img.png](../../../assets/img2/redis_hash.png)
 通过这个跳跃的试探我们知道15是介于四个2和八个2之间组成的，中间的五个2、六个2、七个2我们都没有试过，所以还要继续查找。这个时候我们已经知道了15肯定是比四个2大的，所以用15-（四个2）=7，继续看看剩下的7是由最多多少个组成，这就和上面同一个流程，因为刚刚计算
 15-（四个2）=7的时候已经减去了4个2，所以最终的结果就是4+7/2。
 同理计算7/2的时候也是从一个2相加开始试探：
