--- a/_posts/interviews/2025-06-16-简历问题.md
+++ b/_posts/interviews/2025-06-16-简历问题.md
@@ -143,6 +143,12 @@ canal本身就是基于监听mysql binlog实现的，所以源表有insert、upd
 ### Canal如何使用的？什么原理？
 是阿里开源的一款基于监听Mysql binlog的增量数据同步的中间件，可以订阅binlog日志，然后进行一些数据消费。
 
+如何使用：
+1. mysql修改my.cnf配置文件启动binlog
+2. 创建canal用户，在canal的配置文件中配置监听数据库，启动canal实例
+3. 代码中使用canal客户端，订阅binlog日志，判断row类型，是insert还是update还是delete，处理对应的逻辑。
+
+原理：
 1. canal模拟mysql slave与mysql master的交互协议，伪装自己是一个mysql slave，向mysql master发送dump协议；
 2. mysql master收到mysql slave（canal）发送的dump请求，开始推送binlog增量日志给slave(也就是canal)；
 3. mysql slave（canal伪装的）收到binlog增量日志后,就可以对这部分日志进行解析，获取主库的结构及数据变更；
@@ -156,10 +162,6 @@ dolphin有DAG，可以配置任务流，有依赖关系。
 ---
 ### 怎么开发text2Sql功能？
 1. 基于提示词工程，给定prompt，比如你是一个sql生成专家，给定表结构，只需要给出sql语句，不需要解释。
-
-LLama
-Qwen
-DeepSeek
 
 SSE：Server-Sent Event。基于Http协议，服务器可以持续发送数据给客户端。context-type=text/event-stream,
 
