--- a/_posts/interviews/2025-06-09-Flink.md
+++ b/_posts/interviews/2025-06-09-Flink.md
@@ -16,21 +16,13 @@ tags:
 
 ---
 ### Flink的工作原理？工作流程？内部运行机制？
-1. 首先用户提交jar包之后，Flink会生成StreamGraph，
+1. 首先用户提交jar包之后，Flink会生成StreamGraph，向resourcemanager请求资源启动jobmanager和taskmanager
 2. 然后生成JobGraph，提交到JobManager上，
 3. JobManager会生成ExecutionGraph
 4. JobManager会根据执行图生成Task，把Task提交到TaskManager上。
 5. 由TaskManager来执行Task。 整个流程就是这样的。
 
 ![img.png](../../assets/flink/img.png)
-
----
-### Flink on Yarn提交作业的流程？
-1. 提交jar包之后会提交到Yarn ResourceManager上
-2. ResourceManager会分配一个Container给Flink ApplicationMaster，在ApplicationMaster中启动JobManager
-3. JobManager会请求资源slots，Flink会向Yarn ResourceManger请求Container启动TaskManager,
-4. TaskManager启动之后，会提供slots，
-5. JobManager把执行的Task分发给TaskManager,开始执行任务
 
 ---
 ### Flink的执行图有哪几种，分别是什么作用
