--- a/_posts/interviews/2025-06-09-Spark.md
+++ b/_posts/interviews/2025-06-09-Spark.md
@@ -27,9 +27,9 @@ tags:
 
 **Spark任务执行流程， Spark工作流程**：
 1. 首先我们通过Spark-submit提交任务的时候，会指定jar包和主类；
-2. 然后会启动Driver进程，执行main函数，会初始化SparkContext，向Cluster manager注册程序，申请需要的executor资源；
-3. 当代码执行Action算子操作时会触发job的执行，DAG Scheduler会根据RDD的依赖关系生成DAG图，根据宽依赖Shuffle划分成多个stage；
-4. 每个stage对应一个taskset，taskset里有很多task。Task Scheduler会把taskset中的task分发给executor；
+2. 然后会启动Driver进程，执行main函数，会初始化SparkContext，向Cluster manager注册程序，申请需要的executor资源，启动executor并且把心跳信息发送给资源管理器；
+3. 当代码执行Action算子操作时会触发job的执行，SparkContext会构建DAG图，DAG Scheduler会根据RDD的依赖关系将DAG图分解成Stage，根据宽依赖Shuffle划分成多个stage；
+4. 每个stage对应一个taskset，taskset里有很多task。Task Scheduler会把taskset中的task分发给executor；分发的过程会
 5. 最后就是executor读取数据执行具体的task任务
 
 ![img.png](../../assets/spark/img.png)
