--- a/_posts/interviews/2025-06-16-简历问题.md
+++ b/_posts/interviews/2025-06-16-简历问题.md
@@ -163,112 +163,9 @@ dolphin有DAG，可以配置任务流，有依赖关系。
 ### 怎么开发text2Sql功能？
 1. 基于提示词工程，给定prompt，比如你是一个sql生成专家，给定表结构，只需要给出sql语句，不需要解释。
 
-SSE：Server-Sent Event。基于Http协议，服务器可以持续发送数据给客户端。context-type=text/event-stream,
-
 模型部署在OLLama上，后端使用SpringAI读取Ollama上部署的模型，然后前端发送请求，后端调用模型，发送SSE消息给前端。
 
-```java
-@SpringBootTest
-class SpringAiApplicationTests {
-  @Autowired
-  private OllamaChatClient chatClient;
-
-  @Test
-  void contextLoads() {
-    String message = "鲁迅和周树人什么关系";
-    System.out.println(chatClient.call(message));
-  }
-
-  //流式访问
-  void streamChat() throws ExecutionException, InterruptedException {
-    CompletableFuture<Void> future = new CompletableFuture<>();
-
-    String message = "xxx";
-    PromptTemplate promptTemplate = new PromptTemplate("xxx");
-
-    Prompt prompt = promptTemplate.create(Map.of("message", message));
-    chatClient.stream(prompt).subscribe(
-      chatResponse -> {
-        System.out.println("response: " + chatResponse.getResult().getOutput().getContent());
-
-      },
-      throwable -> {
-        System.err.println("err:" + throwable.getMessage());
-      },
-      () -> {
-        System.out.println("complete");
-        future.complete(null);
-      }
-    );
-    future.get();
-  }
-}
-```
-
-```java
-@RestController
-public class SseController {
-
-    private final List<SseEmitter> emitters = new CopyOnWriteArrayList<>();
-    private final ExecutorService executor = Executors.newCachedThreadPool();
-    private final AtomicLong counter = new AtomicLong();
-
-    @GetMapping("/sse")
-    public SseEmitter sse() {
-        SseEmitter emitter = new SseEmitter(-1L); // -1 表示不设置超时
-        emitters.add(emitter);
-
-        emitter.onCompletion(() -> emitters.remove(emitter));
-        emitter.onTimeout(() -> emitters.remove(emitter));
-        emitter.onError((e) -> emitters.remove(emitter));
-
-        // 可选：发送一个初始消息
-        try {
-            emitter.send(SseEmitter.event().name("INIT").data("连接已建立"));
-        } catch (IOException e) {
-            emitter.completeWithError(e);
-        }
-        return emitter;
-    }
-
-    // 模拟推送消息的示例方法
-    public void pushMessage(String message) {
-        for (SseEmitter emitter : emitters) {
-            executor.execute(() -> {
-                try {
-                    emitter.send(SseEmitter.event().name("message").data(message));
-                } catch (IOException e) {
-                    emitter.completeWithError(e);
-                }
-            });
-        }
-    }
-
-    // 模拟定时推送消息
-    @GetMapping("/start-pushing")
-    public String startPushing() {
-        executor.execute(() -> {
-            while (true) {
-                try {
-                    Thread.sleep(2000); // 每2秒推送一次
-                    pushMessage("服务器推送的消息 " + counter.incrementAndGet());
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                    break;
-                }
-            }
-        });
-        return "开始推送消息";
-    }
-
-    // 停止推送消息
-    @GetMapping("/stop-pushing")
-    public String stopPushing() {
-        executor.shutdownNow();
-        return "停止推送消息";
-    }
-}
-```
+前后端交互的时候使用SSE协议：Server-Sent Event。基于Http协议，单向传输，服务器可以持续发送数据给客户端。MIME类型为：context-type=text/event-stream,
 
 ---
 ### SEIR模型是什么？
