--- a/_posts/interviews/2023-03-14-分布式.md
+++ b/_posts/interviews/2023-03-14-分布式.md
@@ -57,7 +57,7 @@ tags:
  - Transaction Coordinator (TC)：事务协调者，维护全局和分支事务的状态，驱动全局事务提交或回滚。
  - Transaction Manager (TM)：事务管理器，定义全局事务的范围：开始全局事务、提交或回滚全局事务。
  - Resource Manager (RM)：资源管理器，管理分支事务处理的资源，与TC交谈以注册分支事务和报告分支事务的状态，并驱动分支事务提交或回滚。
-2. TCC Tracsaction
+2. TCC Transaction
 
 ---
 ### 系统的CAP性质？如何保证AP和CP？
