--- a/_posts/interviews/2023-03-09-计算机网络.md
+++ b/_posts/interviews/2023-03-09-计算机网络.md
@@ -364,6 +364,12 @@ Netty是一个异步事件驱动的网络应用框架，用于快速开发可维
 - 高性能：Netty使用了高效的NIO技术，能够处理大量的并发连接，并且具有低延迟和高吞吐量的特点。
 - 可扩展性：Netty支持多种协议，包括HTTP、WebSocket、MQTT等，并且可以自定义协议。
 
+bossGroup，workerGroup
+bootStrap.group(bossGroup, workerGroup).channel().childHandler(xxxHandler.channelRead0()).bind(port).sync()
+
+nio和epoll的区别？
+- nio 是用 selector 循环，处理 channel 事件，epoll 是基于事件驱动的，只有 channel 有事件，会有 epoll 系统调用。
+
 ---
 ### 了解netty的内存分配吗？怎么处理粘包和拆包
 - 内存分配：Netty 提供了灵活的内存分配策略，包括池化和非池化、直接内存和堆内存的选择，开发者可以根据具体需求选择合适的分配方式。
@@ -384,8 +390,6 @@ QUIC好处：
 ### select、poll、epoll底层，区别是什么？
 都是操作系统提供的多路复用的技术，单个进程可以监听多个文件描述符的事件。
 
-
-
 ---
 ### tcp半连接、全连接
 - 半连接：TCP三次握手只完成前两步，即客户端发送SYN包，服务端发送SYN+ACK包，客户端收到后发送ACK包。
@@ -393,7 +397,6 @@ QUIC好处：
 
 ---
 ### netstat 什么情况下会有timewait
-
 netstat是查看TCP连接的命令。
 ```shell
 # 查看处于TIME_WAIT状态的TCP连接
