--- a/_posts/interviews/2023-03-13-OS.md
+++ b/_posts/interviews/2023-03-13-OS.md
@@ -34,7 +34,6 @@ tags:
 
 ---
 ### 进程状态
-
 1. new新建
 2. ready就绪
 3. running运行
@@ -44,12 +43,11 @@ tags:
 
 ---
 ### 线程状态
-
 1. 新建状态：线程对象已经被创建
 2. 可运行：调用了start方法，可以被调度器选中来获取CPU时间片，但并不一定正在运行，只是表示可以被运行
 3. 运行：获得CPU时间片
 4. 阻塞：等待获取某个锁，或调用了阻塞方法
-5. 等待：调用了wait(),join()方法
+5. 等待：调用了wait(),join()方法，主动暂停自己的执行，而blocked是由于线程尝试获取已被占用的锁而被迫暂停
 6. 计时等待:调用了Thread.sleep(long)，Object.wait(long),带有超时机制
 7. 终止：完成run方法中所有指令。
 
