--- a/_posts/interviews/2023-03-14-Kafka.md
+++ b/_posts/interviews/2023-03-14-Kafka.md
@@ -30,7 +30,7 @@ tags:
 ### kafka快体现在哪里，为什么快？
 Kafka支持高性能、低延迟的数据传输，主要是它的架构和采用的一些技术有关。
 1. 零拷贝：允许数据直接从文件系统复制到网络接口，加快了数据传输速度；
-2. kafka的消息支持批量发送，而且可以压缩，减小了网络传输开销；
+2. 消息批量发送，而且可以压缩，减小了网络传输开销；
 3. kafka写入磁盘是顺序写，而不是随机写，减少了磁盘的寻道时间；
 4. kafka一个主题可以分成多个分区，每个分区都是独立的并发单元；
 5. 集群架构：采用分布式集群架构，可以将消息存储在多个服务器上，提高系统的可用性和可靠性。
@@ -189,34 +189,17 @@ Kafka的特性：
 6. 强大的生态系统：有很多客户端库、框架以及与大数据生态系统的良好集成。
 
 ---
-### 消息队列的重复消费、消息丢失、消息顺序等问题如何保证？
-
-1. 消息不丢失
- - 发送端回调
- - 消费端消费完后手动提交offset
- - kafka设置acks = all
-
-2. 重复消费
- - 消费端做幂等校验
- - 手动提交offset，接收到就提交，允许消息延迟的情况，可能会丢失，之后做兜底。
-
----
-### Kafka的消息保证机制有哪些？如何保证消息的可靠性(消息丢失)？
-**什么叫消息可靠性**：就是确保消息一定能发送到服务器进行存储，并且发生宕机可以从备份数据中恢复。
-
-- 第一、生产者能否保证发送的消息是可靠的；
-- 第二、消费者能够可靠的消费消息；
-
-1. 消息可以持久化，服务器崩溃了，也可以恢复数据；
-2. 副本机制:每个topic的partition分区可以配置多个副本，其中一个作为leader，其他的都是follower，leader会处理所有的读写请求，follower会从leader同步数据，如果leader失败，会进行leader选举，可以保证系统的可用性和消息的可靠性；
-3. **ack机制**：生产者在发送消息的时候可以选择不同的**确认级别**：
+### Kafka的消息保证机制有哪些？
+1. 持久化机制：消息可以持久化，服务器崩溃了，也可以恢复数据；
+2. 副本机制: 每个topic的partition分区可以配置多个副本，其中一个作为leader，其他的都是follower，leader会处理所有的读写请求，follower会从leader同步数据，如果leader失败，会进行leader选举，可以保证系统的可用性和消息的可靠性；
+3. ack机制：生产者在发送消息的时候可以选择不同的**确认级别**：
  - acks = 0：表示生产者不会等待消息确认，可能消息会丢失；
  - acks = 1：表示生产者会等待leader确认收到消息，但是不会等待所有follower同步完成；
  - acks = all：表示生产者会等待ISR列表（in-sync replicas）中的所有follower确认收到消息。
 4. offset机制：kafka可以让消费者控制什么时候提交offset偏移量。消费者可以自动提交或者手动提交，手动提交可以让程序控制什么时候一条消息才叫被成功处理了，可以避免重复消费或者消息丢失；
 
 ---
-### Kafka的消费者如何处理重复消息？如何保证消息的有序性？如何保证消息不丢失？
+### Kafka的消费者如何处理重复消息？如何保证消息的有序性？如何保证消息可靠性不丢失？
 为什么会收到重复消息？
 1. 消费者组有消费者加入或退出，分区会被重新分配，可能导致重复消费；
 2. offset没有成功提交；
@@ -226,53 +209,26 @@ Kafka的特性：
 2. 手动管理offset：消费者手动控制offset的提交时机，确保只有消息成功处理完成后才提交offset值。
 
 如何保证消息有序性：
-1. **分区键**：把同一业务逻辑的消息用相同的分区键路由到同一个分区，保证相对有序
-2. **单分区**：如果需要所有消息都有序，可以将所有消息都写到同一个分区。会牺牲吞吐量。
-3. **消费者单线程处理**：每个分区只能由一个消费者线程处理，避免多线程并发处理导致乱序。
-4. **手动提交offset**：确保消息按顺序处理完成后再提交偏移量
- - 一个topic只指定一个partition（不现实）
- - 首先在同一个partition中消息肯定是有序的，发送消息的时候可以根据key指定发到哪个partition，kafka发送一条消息的时候，可以指定topic、partition、key、data四个参数。我们可以
-  把同一key的消息都发送到同一个partition中。
-  保证将同一个语义下的消息放到同一个partition分区中，比如一个订单有支付、发货、评价三条消息，要将同一个订单的这三条消息发送到同一个分区中，保证有序性。
-  具体做法可以用哈希取模。
-
-> Kafka通过分区（partition）来保证消息有序性。每个分区内的消息都是有序的，
-而且Kafka保证一个分区内的消息只能被一个消费者消费。因此，如果一个主题（topic）只有一个分区，
-那么消息的顺序就是有序的。如果一个主题有多个分区，那么Kafka会根据消息的key来将消息分配到不同的分区中，
-保证相同key的消息被分配到同一个分区中，从而保证消息的有序性。
+1. 分区键：把同一业务逻辑的消息用相同的分区键路由到同一个分区，保证相对有序
+2. 单分区：如果需要所有消息都有序，可以将所有消息都写到同一个分区。会牺牲吞吐量。
+3. 消费者单线程处理：每个分区只能由一个消费者线程处理，避免多线程并发处理导致乱序。
+4. 手动提交offset：确保消息按顺序处理完成后再提交偏移量
 
 如何保证消息不丢失？ 
 1. 生产端丢失：回调函数判断是否发送成功
 2. 消费端丢失：关闭自动提交offset，只有真正消费了之后才提交offset值。但是会带来重复消费的问题
-3. Kafka丢失：设置acks=all，只有全部副本都收到消息才表示发送成功，但是这样延迟会很高；设置replication.factor>=3,保证每个分区有至少3个副本，保证数据安全；
-min.insync.replica>=1,代表消息至少要被写入两个副本才表示发送成功。
-
-> 需要配置kafka使用replication，kafka 的复制机制能够让每个分区保存多个副本，在不同的broker节点上，
-> 生产者发送消息到topic之后，分区的主节点会把消息复制到其他从节点上，保证消息在集群内不同节点上都有副本。
-> 另外，可以设置acks=all，表示只有全部副本都收到消息才表示发送成功。
+3. Kafka丢失：设置acks=all，只有全部副本都收到消息才表示发送成功，但是这样延迟会很高；设置replication.factor>=3,保证每个分区有至少3个副本，保证数据安全； min.insync.replica>=1,代表消息至少要被写入两个副本才表示发送成功。
 
 ---
-### Kafka出现消息堆积怎么办？怎么解决线上消息队列积压问题
-- 一般情况出现消息堆积要么就是生产者发送消息太快或者是消费者消费太慢。
-- 一般会增加消费者实例数量，同时也要增加分区数量，因为一个分区只会被一个消费者消费，只增加消费者实例不增加分区只会增加空闲的消费者实例。
-另外如果是生产者消息发送太快的话，可能是系统出现流量高峰，应该在上游就考虑限流降级。
-如果是消费者消费太慢的话，可以看看是不是消费过程中出现了异常。
-
----
-### 消息队列有处理过发生延迟的情况吗？
+### 消息队列有处理过发生延迟的情况吗？消息堆积
 会有，一般是网络问题或者是流量高峰的时候会出现。
 
-- 首先我们会配置消息堆积量的告警，出现不同程度的堆积情况会有相应级别的告警；
-- 消息队列客户端消费消息的话一般通过长轮训批量拉取消息，然后提交给消费线程。
-- 如果出现消息堆积通常是客户端的消费能力跟不上，消息消费耗时比较长，或者是消费并发度不够。
-- 首先优先解决消费耗时的问题，把消费耗时控制在合理的范围，比如如果有外部的IO操作，读写数据库、读写缓存、或者下游RPC调用或HTTP调用，都可能导致消费耗时增加，可以尝试本地缓存一些需要的数据。
-- 可以扩大Topic分区数，扩大单个节点的并发线程数。
+1. 首先我们会配置消息堆积量的告警，出现不同程度的堆积情况会有相应级别的告警；
+2. 如果是客户端的消费能力跟不上，消息消费耗时比较长，或者是消费并发度不够。 首先优先解决消费耗时的问题，比如如果有外部的IO操作、读写数据库或者下游RPC调用或HTTP调用，都可能导致消费耗时增加，可以尝试本地缓存一些需要的数据。
+3. 一般会增加消费者实例数量，同时也要增加分区数量，因为一个分区只会被一个消费者消费，只增加消费者实例不增加分区只会增加空闲的消费者实例。
+4. 另外如果是生产者消息发送太快的话，可能是系统出现流量高峰，应该在上游就考虑限流降级
 
 > 反正就是从消费耗时和并发度的角度优化吧。
-
-如何处理:
-- 查看是客户端还是服务端发生的堆积，查看客户端的堆栈信息，一般是网络问题、或者外部数据库读写问题。
-- 如果堆积的消息可以跳过不消费的话，可以重置消费位点跳过这些堆积的消息从最新位点开始消费。
 
 ---
 ### 零拷贝技术？
