--- a/_posts/interviews/java基础/2023-03-14-Java.md
+++ b/_posts/interviews/java基础/2023-03-14-Java.md
@@ -16,7 +16,7 @@ tags:
 1. 引入一个HTTP客户端API，支持HTTP/2协议 
 2. 引入了ZGC，垃圾回收的暂停时间会更短；
 3. 引入了TLS 1.3 传输层安全协议TLS 1.3版本；
-4. 在lambda表达式里可以使用var关键字表示参数类型，可以省略类型名，会变量的类型推断；
+4. 在lambda表达式里可以使用var关键字表示参数类型，可以省略类型名，会对变量进行类型推断；
 5. 移除了Java EE模块;
 6. 可以直接用java命令运行一个单独的java文件，之前都需要先编译javac xxx.java生成class文件，再运行java xxx.class文件；可以简化原型开发，简化教学；
 7. 引入了动态类文件常量，新增了两种常量池类型，CONSTANT_Dynamic和CONSTANT.InvokeDynamic，增强类文件中常量的表达能力
@@ -186,7 +186,7 @@ println(addTwo(3))
 
 ---
 ### java中抽象类和接口有什么区别？什么情况下被使用？
-- 抽象类使用abstract声明，可以有抽象方法和非抽象方法，可以有任意类型的成员变量，单继承。通常表示为子类提供一些默认实现方法的时候会定义一个抽象类；
+- 抽象类使用abstract声明，可以有抽象方法和非抽象方法，可以有任意类型的成员变量，单继承。通常在需要为子类提供一些默认实现方法的时候会定义一个抽象类；
 - 接口使用implements声明，方法默认都是抽象的，成员变量只能是常量，可以实现多个接口，表示的是定义一种行为规范，表示一种能力。
 
 ---
