--- a/_posts/interviews/java基础/2025-06-22-JVM调优.md
+++ b/_posts/interviews/java基础/2025-06-22-JVM调优.md
@@ -12,15 +12,16 @@ tags:
 
 ---
 ### OOM如何排查 内存泄露有哪些？怎么检查
+OOM怎么检查：
+1. jvm内置工具，jstat -gc pid interval 监控gc频率，如果老年代持续增长且full gc频繁，可能存在内存泄露； jmap -heap pid 查看堆内存使用情况
+2. 生成堆转储文件，jmap -dump:live,format=b,file=heapdump.hprof pid  查看最耗内存的对象
+3. 分析堆转储文件，MAT或Visual VM，**统计各类对象的数量和占用内存**，查找占用内存最大的对象
+4. 检查代码，资源使用try-with-resources自动关闭；ThreadLocal在finally里remove
+
+OOM有哪些：
 1. **文件流、网络连接、数据库连接**没有关闭，导致对象无法被回收
 2. 缓存没有设置过期时间，导致对象一直存在
 3. ThreadLocal如果没有remove移除，内存泄露，会导致对象无法被回收
-
-怎么检查：
-1. jvm内置工具，jstat -gc pid interval 监控gc频率，如果老年代持续增长且full gc频繁，可能存在内存泄露； jmap -heap pid 查看堆内存使用情况
-2. 生成堆转储文件，jmap -dump:format=b,file=heapdump.hprof pid  查看最耗内存的对象
-3. 分析堆转储文件，MAT或Visual VM，**统计各类对象的数量和占用内存**，查找占用内存最大的对象
-4. 检查代码，资源使用try-with-resources自动关闭；ThreadLocal在finally里remove
 
 ---
 ### jvm调优工具
@@ -34,7 +35,7 @@ tags:
 - ps：
 
 ---
-### 如何排查oom？如何定位线上OOM问题？垃圾收集器的参数配置
+### 垃圾收集器的参数配置
 一些常用的JVM配置参数
 - -Xmx(堆内存最大值) 4g  -Xms(堆内存初始值大小) 4g 设置堆内存
 - -XX：UseG1GC -XX：MaxGCPauseMIllis=50  指定GC算法
