--- a/_posts/interviews/java基础/2025-06-22-java线程安全.md
+++ b/_posts/interviews/java基础/2025-06-22-java线程安全.md
@@ -49,7 +49,7 @@ tags:
 ### synchronized运行原理
 运行原理是通过**monitor-enter指令获取对象锁**，如果成功，获取对象锁，如果失败，会进入monitor监视器的等待队列进行等待。**释放锁的时候通过monitor-exit释放对象锁，同时唤醒等待队列里的等待线程**。
 - synchronized修饰对象时：如果修饰的是对象，那么他是依赖于monitor对象来实现锁的机制的。当monitor被其他线程占用时就会处于锁定状态，线程执行monitor-enter指令时尝试获取monitor的所有权。线程退出monitor的时候，执行monitor-exit指令。
-- synchronized修饰方法时：那么则是通过ACC_SYNCHRONIZED标识符来进行加锁的。
+- synchronized修饰方法时：是通过ACC_SYNCHRONIZED标识符来进行加锁的。
 
 synchronized的底层实现是**基于对象在内存中的存储格式**来实现的，
 
