--- a/_posts/interviews/数据库/2025-06-22-数据库索引.md
+++ b/_posts/interviews/数据库/2025-06-22-数据库索引.md
@@ -25,7 +25,7 @@ CREATE UNIQUE INDEX ON TABLE_NAME (COL1,COL2...);
 CREATE INDEX ON TABLE_NAME (COL1,COL2...);
 ```
 
-> 一个组合索引也可以同时是一个覆盖索引，两者并不互斥；
+> 一个联合索引也可以同时是一个覆盖索引，两者并不互斥；
 
 ---
 ### 覆盖索引有什么优点
@@ -66,7 +66,7 @@ InnoDB中的聚簇索引：
 使用索引应该注意什么？
 - 经常更新的字段不应该作为索引
 - 每张表最好不超过5个索引，因为mysql优化器会选择最佳的执行计划，会耗时
-- 尽可能建组合索引(联合索引)，组合索引要特别注意列的顺序，最常用于查询条件的列应该放在前面；**最左匹配原则**
+- 尽可能建组合索引(联合索引)，联合索引要特别注意列的顺序，最常用于查询条件的列应该放在前面；**最左匹配原则**
 - 避免**索引失效**
 
 ---
