--- a/_posts/interviews/面经/2025/2025-07-17-满帮.md
+++ b/_posts/interviews/面经/2025/2025-07-17-满帮.md
@@ -11,3 +11,45 @@ tags:
 
 ---
 ### G1 的特性
+
+
+---
+### Kafka 与其他对比
+
+---
+### 设计一个淘宝类的应用需要哪些层级？
+浏览器 dns nginx反向代理 tomcat服务器  服务  数据库
+
+负载均衡  权限认证  本地缓存分布式缓存 数据库读写分离 分库分表 数据按业务分库 分布式文件系统HDFS NoSQL数据库 ES搜索引擎 应用拆分 通用组件设计成微服务 容器化 云平台 ESB企业服务总线
+
+---
+### netty 如何通信
+基于IO多路复用模型，通过 Linux 底层的 select、epoll 系统调用复用一个 IO 线程，处理多个连接。
+
+netty 实现了多线程的 reactor 模型，当有 event 发生时，通知对应的事件处理器 channelHandler 处理事件，NioEventLoop做轮询查看是否有事件发生，使用一个 bossGroup 负责接收请求，一个 workerGroup 负责处理请求。
+
+---
+### Thrift 如何通信？
+thrift从下到上分为不同的层级，有
+ - Transport层：负责发送和接收字节流数据，有TSocket对应Socket传输，有TFileTransport对应文件传输；
+ - Protocol层：负责序列化和反序列化数据，有TBinaryProtocol，TCompatProtocol，TJsonProtocol。
+ - Processor层：负责处理数据的逻辑，解析调用参数，进行用户逻辑的执行，写回返回值。
+ - Server层：接收请求，有TThreadPoolServer，TNonblockingServer。
+
+---
+### kafka rebalance 如何操作
+
+---
+### offset是什么？
+
+---
+### 最近最久在xxl-job中如何选择？ 如何持久化
+
+
+---
+### 同城双活、异地多活
+
+---
+### zookeeper 为什么使用zookeeper？不可以使用数据库吗？
+
+
