--- a/_posts/interviews/面经/2025/2025-07-17-满帮.md
+++ b/_posts/interviews/面经/2025/2025-07-17-满帮.md
@@ -11,7 +11,10 @@ tags:
 
 ---
 ### G1 的特性
-
+G1的优点：
+1. 分区收集，优先回收垃圾最多的区域，而不是整个堆，这样的话可以更灵活控制回收时间；
+2. 可预测的停顿时间，G1提供一个参数叫-XX：MaxGCPauseMillis，每次垃圾回收时尽量控制停顿时间不超过这个值，G1会根据目标停顿时间和内存使用的情况，动态调整每次回收的区域数量，从而实现更稳定的停顿时间；
+3. 可以避免内存碎片：G1会在垃圾回收时将存活对象复制到其他区域，较少Full GC的频率。
 
 ---
 ### Kafka 与其他对比
@@ -38,6 +41,13 @@ thrift从下到上分为不同的层级，有
 
 ---
 ### kafka rebalance 如何操作
+rebalance过程：
+1. PreparingRebalance状态：所有消费者停止消费；
+2. 组成员加入请求(JoinGroup):消费者向Coordinator发送加入请求；
+3. 选举消费者组长：通常是第一个加入的消费者
+4. 分区分配：组长运行分区分配算法： sticky、range、round-robin
+5. 同步分配方案(SyncGroup):Coordinator将分配方案发送给所有成员
+6. 恢复消费：消费者根据分配结果开始消费
 
 ---
 ### offset是什么？
